hphp/test/zend/good/tests/lang/bug21961.php.skipif
<?php if (version_compare(zend_version(),'2.0.0-dev','<')) die('skip prepared for ZE2'); ?>