hphp/test/zend/bad/tests/classes/tostring_002.php.skipif
<?php if (version_compare(zend_version(), '2.0.0-dev', '<')) die('skip ZendEngine 2 needed'); ?>